Display "Welcome "+name in UploadActivity Changed password to display password char in Login and Signup layouts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity android:name=".ForgotPasswordActivity"></activity>
         <activity android:name=".ImageActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".DashBoardActivity" />
+        <activity android:name=".UploadActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
