--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="DS Storage"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MiniProject2">
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
         <activity android:name=".ForgotPasswordActivity"></activity>
         <activity android:name=".ImageActivity" />
         <activity android:name=".LoginActivity" />
